Slow performance with <select> with many options and size >= 2 https://bugs.webkit.org/show_bug.cgi?id=105483

Source/WebCore:

Reviewed by Eric Seidel.

Avoids creating renderers for children of list <select>s that are not
<option> or <optgroup>. This is both more correct (no other browser
displays them) and provides a performance benefit (direct text children
of <select> would have O(N^2) behavior; this usually happened due to
whitespace between <option>...</option> tags).

Test: fast/forms/menulist-no-renderer-for-unexpected-children.html

* html/HTMLSelectElement.cpp:
(WebCore::HTMLSelectElement::childShouldCreateRenderer):

LayoutTests:

Reviewed by Eric Seidel.

Test that checks that text and non-<option> and <optgroup> element
children of <select> do not get a renderer.

* fast/forms/menulist-no-renderer-for-unexpected-children-expected.txt: Added.
* fast/forms/menulist-no-renderer-for-unexpected-children.html: Added.


Canonical link: https://commits.webkit.org/123859@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138374 268f45cc-cd09-0410-ab3c-d52691b4dbfc